<resources>

    <string name="app_name">Radio Mystery Theater</string>
    <string name="app_widget_name">Radio Theater Widget</string>
    <string name="app_id">1144158162290422</string>
    <string name="app_description">
        This app provides an easy, quality listening experience for the CBS Radio Mystery Theater.
        <b>1399</b> fifty-minute episodes are here for your listening pleasure.\n\n
        <b>Autoplay</b> will begin with the oldest unheard episode and keep playing.
        After one episode finishes, the next automatically starts. Press Autoplay again to Pause.
        Swipe right for next episode, left for previous episode. Long-press to Stop.
        Once playback begins, a seek ring will appear. Use the button on that ring to adjust play position.
        Note that next/previous swiping works for the in-app Autoplay button, but not using the Widget.
        Use Options -> Settings to change the default text font size and/or font selection.
        \n\nThank you! to CBS Corporation for providing these full-cast radio dramas to the public.
        All episodes can be downloaded for free from <b>http://www.cbsrmt.com</b>
        \n\nThis is my Capstone Project for the <b>Udacity Android Nanodegree</b> program.
        I hope you like it. - Lee Hounshell, July 15, 2016.\n
        \n
        CREDITS:\n
                    - Firebase for backend processing\n
                    - Content Provider Generator by Benoit Lubek\n
                    - DAZ Studio used to create the Haunted-House\n
                    - ButterKnife by Jake Warton\n
                    - Circle Progress View by Jakob Grabner\n
                    - Circular Seekbar Widget by Raghav Sood and Lee Hounshell\n
                    - StackOverflow.com - an awesome resource!\n
                    - Android Studio / Google + Udacity\n
                    - UAMP - The Android Universal Media Player\n
                    - Wikipedia for the photo of E. G. Marshall\n
                    - www.cbsrmt.com - they made this possible\n
        \n
    </string>

    <string name="e_g_marshall">E. G. Marshall</string>
    <string name="app_author">Lee Hounshell</string>
    <string name="app_author_contact">contact Lee Hounshell</string>
    <string name="app_contact">lee.hounshell@gmail.com</string>
    <string name="description">A description of the Radio Mystery Theater app.</string>
    <string name="trial_vs_paid">Is this app a paid version?</string>
    <string name="trial_version">Trial version:</string>
    <string name="paid_version">Paid version:</string>
    <string name="app_not_found">Not on PlayStore</string>
    <string name="not_on_playstore">The paid version of this app is not available on the Google PlayStore. Try again later.</string>
    <string name="playstore_upgrade">Opening Google PlayStore for upgrade.</string>
    <string name="one_moment">One moment, please&#8230;</string>

    <string name="filter_title_viewradiotheater">Radio Mystery Theater</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="up">Up</string>

    <!-- Strings related to Share email -->
    <string name="email_share_episode">Episode #</string>
    <string name="email_share_checkitout">Check it out!</string>
    <string name="email_share_clicktohear">Click to hear \'</string>
    <string name="email_share_radio">\' with the \'Radio Mystery Theater\' Android App</string>
    <string name="email_share_hereis">Here is the</string>
    <string name="email_share_webpage">episode\'s webpage.</string>
    <string name="email_share_mp3">And here is the episode\'s mp3</string>
    <string name="email_share_mp3_download">download link.</string>
    <string name="email_share_applink">http://market.android.com/details?id=</string>
    <string name="email_share_marketlink">market://details?id=</string>

    <!-- Strings related to Autoplay and messages -->
    <string name="title_activity_autoplay">AutoplayActivity</string>
    <string name="episode_number">Episode Number</string>
    <string name="episode_description">Episode Description</string>
    <string name="episode_rating">Episode Rating</string>
    <string name="none"> </string>
    <string name="autoplay_next">Autoplay next episode</string>
    <string name="play_now">Play episode</string>
    <string name="weblink">Web Link</string>
    <string name="episodes_count">1399</string>
    <string name="genre">__RADIO_DRAMA__</string>
    <string name="icon_url">http://harlie.com/radiotheater/logo_icon.png</string>
    <string name="key_art_url">http://harlie.com/radiotheater/e_g_marshal_1970.jpg</string>
    <string name="haunted_url">http://harlie.com/radiotheater/haunted.png</string>
    <string name="sqlite_failed">SQLite Database Failed</string>
    <string name="error_loading_media">Error Loading Media</string>
    <string name="nothing_unheard">No Unheard Episodes</string>
    <string name="trial_remain">TRIAL EPISODES REMAIN</string>
    <string name="trial_complete">!!! TRIAL EXPIRED !!!</string>
    <string name="all_trial_heard">To continue listening, you must upgrade to the paid version.\n
                  Click OK to visit the Playstore and upgrade!</string>
    <string name="heard_everything">You have listened to all 1399 episodes!\nNo unheard episodes remain.</string>
    <string name="unable_to_load">Episode Failed to Load</string>
    <string name="playback_problem">There was a problem loading this episode.\nTry again.</string>
    <string name="ok">OK</string>
    <string name="no_metadata">Missing Episode Metadata</string>
    <string name="existing_database">Existing Episode Database</string>
    <string name="missing_database">Missing Episode Database</string>
    <string name="metadata_loading_problem">Unable to load Episode information.\n
                  Something went wrong with Metadata.</string>
    <string name="database_loading_problem">Unable to load Episode information.\n
                  Something is wrong with the Database.\nPlease wait for an Internet reload.</string>
    <string name="database_existing_problem">Unexpected initialization error.\n
                  The SQL Database exists.\nPlease wait for an Internet reload.</string>
    <string name="database_missing_problem">Unable to find Episode information.\n
                  The pre-loaded Database is missing.\nPlease wait for an Internet reload.</string>

    // Autoplay BROADCAST messages
    <string name="radio_control_command">Radio-Mystery-Theater:</string>
    <string name="update_buttons">buttons.</string>
    <string name="update_scroll_text">scrolltext.</string>
    <string name="metadata_loaded">loaded.</string>
    <string name="request_play">request:</string>
    <string name="duration">duration:</string>
    <string name="error">error:</string>
    <string name="playing">playing:</string>
    <string name="noplay">noplay:</string>
    <string name="complete">complete:</string>
    <string name="error_no_metadata">load failed.</string>

    <!-- Strings related to RadioTheaterService -->
    <string name="casting_to_device">Casting to %1$s</string>
    <string name="favorite">Favorite</string>
    <string name="browse_genre_subtitle">Episodes by genre</string>
    <string name="browse_genres">Genres</string>
    <string name="browse_musics_by_genre_subtitle">%1$s episodes</string>
    <string name="search_queue_title">Search results</string>
    <string name="random_queue_title">Random episode</string>
    <string name="next_queue_title">Next episode</string>
    <string name="current_queue_title">Episode</string>

    <!-- Strings related to Episodes -->
    <string name="title_episode_detail">Episode Detail</string>
    <string name="share_text">You will like this episode of \'Radio Mystery Theater\'</string>
    <string name="unable_to_share">Unable to share episode info!</string>

    <!-- Strings related to login -->
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="signup">Signup</string>
    <string name="login_error">Login Failed.</string>
    <string name="enter_email">Enter your email address and password.</string>
    <string name="invalid_email">Invalid Email or Password.</string>
    <string name="successful">Successful Login.</string>
    <string name="no_database">DATABASE NOT FOUND!</string>
    <string name="too_many_requests">Too Many Requests.</string>
    <string name="auth_fail">Authorization Failed.</string>
    <string name="initializing">Initializing. please wait</string>
    <string name="loading">loading..</string>
    <string name="problem_authenticating">Unable to Authenticate!</string>
    <string name="firebase_authentication_error">The Firebase authentication service did not respond in time.\n\n
                  Check that you have the latest version of Google Play services installed.</string>
    <string name="playstore_error">Playstore Problem!</string>
    <string name="update_playstore">You need to update the Google Playstore.\n
                  Otherwise login using email and password.</string>

    <!-- Strings related to Detail View -->
    <string name="actor1">Actor One</string>
    <string name="actor2">Actor Two</string>
    <string name="actor3">Actor Three</string>
    <string name="actor4">Actor Four</string>
    <string name="actor5">Actor Five</string>
    <string name="actor6">Actor Six</string>
    <string name="writer">Writer</string>

    <string name="actor1_name">Actor One Name</string>
    <string name="actor2_name">Actor Two Name</string>
    <string name="actor3_name">Actor Three Name</string>
    <string name="actor4_name">Actor Four Name</string>
    <string name="actor5_name">Actor Five Name</string>
    <string name="actor6_name">Actor Six Name</string>
    <string name="writer_name">Writer Name</string>

    <!-- Strings related to Settings -->
    <string name="title_font_settings">Font Settings</string>
    <string name="action_more">More</string>
    <string name="action_search">Search</string>
    <string name="action_share">Share</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="font_name">FontName</string>
    <string name="font_size">FontSize</string>
    <string name="pref_default_font">Roboto-Regular.ttf</string>
    <string name="pref_default_size">FontStyle.Medium</string>

    <string name="pref_header_general">General</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_header_notifications">Notifications</string>

    <string-array name="pref_example_list_titles">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>

    <string-array name="pref_example_list_values">
        <item>FontStyle.Small</item>
        <item>FontStyle.Medium</item>
        <item>FontStyle.Large</item>
    </string-array>

</resources>
