<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.harlie.radiotheater.radiomysterytheater.EpisodeDetailFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/text_margin">

            <TextView
                android:id="@+id/episode_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:paddingEnd="@dimen/text_margin"
                android:paddingStart="@dimen/text_margin"
                android:textColor="@color/dark_red"
                android:textSize="30sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/episode_airdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingEnd="@dimen/text_margin"
                android:paddingStart="@dimen/text_margin"
                android:textColor="@color/dark_red"
                android:textSize="30sp"
                android:textStyle="normal" />

        </LinearLayout>

        <TextView
            android:id="@+id/episode_title"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:paddingBottom="@dimen/text_margin"
            android:paddingEnd="@dimen/text_margin"
            android:paddingStart="@dimen/text_margin"
            android:textColor="@color/primary_text"
            android:textSize="33sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/episode_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/text_margin"
            android:paddingStart="@dimen/text_margin"
            android:textColor="@color/primary_text"
            android:textSize="30sp"
            android:textStyle="normal" />

        <RatingBar
            android:id="@+id/episode_rating"
            android:theme="@style/RatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:isIndicator="true"
            android:max="5"
            android:numStars="5"
            android:paddingBottom="@dimen/text_margin"
            android:paddingTop="@dimen/text_margin"
            android:rating="0.0"
            android:stepSize="0.0" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/actor1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/actor1"
                        android:padding="@dimen/image_margin"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/actor1_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="22sp"
                        android:contentDescription="@string/actor1_name"
                        android:visibility="gone" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/actor2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/actor2"
                        android:padding="@dimen/image_margin"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/actor2_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="22sp"
                        android:contentDescription="@string/actor2_name"
                        android:visibility="gone" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/actor3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/actor3"
                        android:padding="@dimen/image_margin"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/actor3_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="22sp"
                        android:contentDescription="@string/actor3_name"
                        android:visibility="gone" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/actor4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/actor4"
                        android:padding="@dimen/image_margin"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/actor4_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="22sp"
                        android:contentDescription="@string/actor4_name"
                        android:visibility="gone" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/actor5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/actor5"
                        android:padding="@dimen/image_margin"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/actor5_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="22sp"
                        android:contentDescription="@string/actor5_name"
                        android:visibility="gone" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/actor6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/actor6"
                        android:padding="@dimen/image_margin"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/actor6_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="22sp"
                        android:contentDescription="@string/actor6_name"
                        android:visibility="gone" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/writer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/writer"
                        android:padding="@dimen/image_margin"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/writer_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="22sp"
                        android:contentDescription="@string/writer_name"
                        android:visibility="gone" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/the_host"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/e_g_marshall_small"
                        android:contentDescription="@string/e_g_marshall"
                        android:padding="@dimen/image_margin"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/the_host_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="22sp"
                        android:text="@string/e_g_marshall"
                        android:contentDescription="@string/e_g_marshall"
                        android:visibility="visible" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </LinearLayout>

</ScrollView>
