<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.harlie.radiotheater.radiomysterytheater.AboutActivity"
    tools:showIn="@layout/activity_about">

    <android.support.v4.widget.NestedScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:background="@color/primary_light"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/trial_or_paid"
                style="?android:attr/textAppearanceMedium"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textColorLink="@color/accent"
                android:textSize="@dimen/version_text_size"
                android:contentDescription="@string/trial_vs_paid" />

            <TextView
                style="?android:attr/textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/about_item_margin"
                android:layout_marginStart="@dimen/detail_inner_horiz_margin"
                android:layout_marginEnd="@dimen/detail_inner_horiz_margin"
                android:paddingTop="@dimen/about_item_margin"
                android:paddingBottom="@dimen/about_item_margin"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@android:color/black"
                android:textColorLink="@color/accent"
                android:textSize="@dimen/about_text_size"
                android:lineSpacingMultiplier="@fraction/about_line_spacing_multiplier"
                android:contentDescription="@string/description"
                android:text="@string/app_description" />

            <ImageView
                style="@style/AboutImage"
                android:id="@+id/LeeHounshellImage"
                android:focusable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/about_item_margin"
                android:paddingBottom="@dimen/about_item_margin"
                android:clickable="true"
                android:contentDescription="@string/app_author"
                android:scaleType="fitCenter"
                android:src="@drawable/lee_hounshell" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/about_item_margin"
                android:paddingBottom="@dimen/about_item_margin"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/about_small_text_size"
                android:contentDescription="@string/app_author"
                android:text="@string/app_author" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/about_bottom_margin"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/about_small_text_size"
                android:contentDescription="@string/app_author_contact"
                android:text="@string/app_contact" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
